# tg-espeak-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
espeak_bot/: espeak.py  espeak_config.py  strategy.py
